# crystal

./: .gitignore  Crystal.hs  cabal.config  computational-distance.mk  crystal.cabal  examine.pl  lexical-distance.pl  run.sh
Crystal/: AST.hs  Check.hs  Config.hs  Env.hs  Infer.hs  JSON.hs  Misc.hs  Parser.hs  Post.hs  Pretty.hs  Recursion.hs  RecursiveType.hs  Seq.hs  Trace.hs  Transform.hs  Tuple.hs  Type.hs
eval/: eval.rkt
misc/: pretty.css  pretty.html  pretty.js
scripts/: git-rev.sh  lexical-distance.pl  mutate-one-script.sh  process-summary.pl  test-transform
t/: Recursion.hs
test/: Recursion.hs  and  basic  blame-function  blame-regression  check-begin  factorial  guess  higher-order-function  higher-order-function2  letrec-case1  letrec-case2  letrec-case3  letrec-case4  letrec-case5  letrec-case6  letrec-case7  letrec-case8  letrec-case9  letrec-caseA  loop  map  plus-vs-string-append  rotate  set-check-elim  set-count  simple-vector-ref  skip-set  test-letrec-split  triangle-iter  variadic  wtf
test/gabriel/: BROKEN  browse.sch  conform.sch  dderiv.sch  div.sch  dynamic.sch  dynamic2.sch  fft.sch  lattice.sch  lattice2.sch  mazefun.sch  nboyer.sch  peval.sch  sboyer.sch
test/gabriel/.svn/: wc.db
test/shootout/: ackermann.chicken  ary.chicken  binarytrees.chicken  fannkuch.chicken  fasta.chicken  fibo.chicken  harmonic.chicken  matrix.chicken  nestedloop.chicken  partialsums.chicken  random.chicken  reversefile.chicken  strcat.chicken  sumcol.chicken  takfp.chicken  wc.chicken
test/shootout/rejected/: hash2.chicken
